Pass / Resign / More time State management around ending games Last move marker Made the hoshi marker a bit smaller Fixed some layout issues with chat area Showing game over score information

--- a/site/web/css/board.css
+++ b/site/web/css/board.css
@@ -148,6 +148,22 @@
     color: white;
 }
 
+.board .stone .last-move {
+    position:absolute;
+    width:45px;
+    height:45px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.board .stone.black .last-move {
+    background-image: url("/image/white-dot.png");
+}
+
+.board .stone.white .last-move {
+    background-image: url("/image/black-dot.png");
+}
+
 .board .stone.vote-1 {
     opacity: .25
 }
