--- a/site/web/css/teamgo.css
+++ b/site/web/css/teamgo.css
@@ -2,3 +2,19 @@ body {
     font-size: 16px;
 }
 
+.btn {
+    font-size:14px;
+}
+
+.not-game-in-progress .game-buttons {
+    display: none;
+}
+
+.game-buttons .btn {
+    margin-left: .5em;
+}
+
+.game-buttons .btn .badge {
+    margin-left: 10px;
+    font-size: 13px;
+}
